syntax = "proto3";
package exomonad.effects.template;

message RenderWorkerPromptRequest {
  string task = 1;
  repeated string read_first = 2;
  repeated string steps = 3;
  repeated string verify = 4;
  repeated string done_criteria = 5;
  repeated string boundary = 6;
  string context = 7;
  repeated string profiles = 8;
  repeated string context_files = 9;
  repeated string verify_templates = 10;
}

message RenderWorkerPromptResponse {
  string rendered = 1;
}

service TemplateEffects {
  rpc RenderWorkerPrompt(RenderWorkerPromptRequest) returns (RenderWorkerPromptResponse);
}
